# download_ECMWF_cloudnet

./: README_Cloudnet_Profile_Library_v11.txt  example_run.txt  get_T_P_profiles_from_cloudnet_2025-10-20_v11.py
cloudnet_profiles/: README.md  pyproject.toml
cloudnet_profiles/cloudnet_profies/: __init__.py
csv/: profile_2025-07-28-07-00.csv  profile_2025-07-28-12-00.csv  profile_2025-10-27.csv
